Add very basic bootstrap form control

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,24 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
     <h1>
         Location based Weather App
     </h1>
     <form method="POST" class="form">
-        Search By:
-        <select name='modeOfSearch' class="dropdown">
-            <option value="IP">IP address</option>
-            <option value="City">City</option> 
-            <option value="Zip">Zip Code</option>                       
-        </select>
-        <input type="text" placeholder="Enter IP/City" class="textField" name='searchItem', required='true'>
-        <br>
-        <input type="text" placeholder="Country/Country Code" class="textField" name='country'>
-        <input type="submit" value="Search">
+        <div class="form-group">
+            Search By:
+            <select name='modeOfSearch' class="dropdown">
+                <option value="IP">IP address</option>
+                <option value="City">City</option> 
+                <option value="Zip">Zip Code</option>                       
+            </select>
+            <input type="text" placeholder="Enter IP/City" class="textField form-control" name='searchItem', required='true'>
+            <br>
+            <input type="text" placeholder="Country/Country Code" class="textField form-control" name='country'>
+            <input type="submit" value="Search" class="btn btn-primary">
+        </div>
+
     </form>
     
 
