--- a/templates/search.html
+++ b/templates/search.html
@@ -1,5 +1,23 @@
 {% extends 'base.html' %}
 
-<div class="container">
-
-</div>
+{% block content %}
+    <div class="container">
+        <div class="container jumbotron">
+            <form method="POST" class="form">
+                <div class="form-group">
+                    Search By:
+                    <select name='modeOfSearch' class="dropdown">
+                        <option value="IP">IP address</option>
+                        <option value="City">City</option> 
+                        <option value="Zip">Zip Code</option>                       
+                    </select>
+                    <input type="text" placeholder="Enter IP/City" class="textField form-control" name='searchItem', required='true'>
+                    <br>
+                    <input type="text" placeholder="Country/Country Code" class="textField form-control" name='country'>
+                    <input type="submit" value="Search" class="btn btn-primary">
+                </div>
+        
+            </form>
+        </div>    
+    </div>
+{% endblock content %}
