Make first iteration of frontend design

--- a/static/style.css
+++ b/static/style.css
@@ -1,14 +1,67 @@
-/* body {
-    background: linear-gradient(180deg, rgba(78, 185, 140, 0.64) 5.34%, rgba(18, 94, 183, 0.56) 100%);
-    width: auto;
-    height: 100vh;
-
-} */
-
 body {
-    position: relative;
+    font-family: 'Lato' sans-serif;
+    background-image: url('/static/assets/bg_image.jpg');
+    background-size: cover;
+    background-position: top center;
 }
 
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background-image: linear-gradient(
+        to bottom, rgba(0,0,0,0.3), rgba(0, 0, 0, 0.6)
+    );
+}
+
+.weatherResult {
+    /* flex: 1 1 100%;
+    padding: 25px 25px 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 12%;
+    text-align: center;
+    justify-content: center;
+}
+
+.city_name {
+    color: #fff;
+    font-size: 32px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.weatherMain {
+    color: #fff;
+    font-size: 32px;
+    font-weight: 700;
+    font-style: italic;
+    text-shadow: 2px 5px rgba(0,0,0,0.3);
+}
+
+.temp {
+    color: #fff;
+    font-size: 100px;
+    font-weight: 900;
+    text-shadow: 2px 10px rgba(0,0,0,0.3);
+}
+
+.temp p span {
+    font-size: 600;
+}
+
+.jumbotron {
+    margin-top: 10%;
+    width: 50%;
+    background-image: linear-gradient(
+        to bottom, rgba(0,0,0,0.5), rgba(0, 0, 0, 0.8)  
+    );
+}
 .navbar {
     position: relative;
 }
@@ -20,5 +73,5 @@ body {
 
 #linkedinLink {
     position: absolute;
-    left: 92%;
+    left: 89%;
 }
