Change icons to light theme

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,12 +32,12 @@
                 </li>
                 <li class="navbar-item" id="githubLink">
                     <a href="https://github.com/sukanta-27/Weather-App" target="_blank">
-                        <img src="/static/assets/GitHub-Mark-32px.png" alt="githubLink">&nbsp;
+                        <img src="/static/assets/GitHub.png" alt="githubLink">&nbsp;
                     </a>
                 </li>
                 <li class="navbar-item" id="linkedinLink">
                     <a href="https://www.linkedin.com/in/sukanta-roy-448a5856" target="_blank">
-                        <img src="/static/assets/linkedin.svg" alt="linkedin" height="32px" width="30px">&nbsp;
+                        <img src="/static/assets/LinkedIn.svg" alt="linkedin" height="32px" width="30px">&nbsp;
                     </a>
                 </li>
             </ul>
