--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Lato' sans-serif;
-    background-image: url('/static/assets/bg_image.jpg');
+    /* background-image: url('/static/assets/bg_image.jpg'); */
     background-size: cover;
     background-position: top center;
 }
@@ -10,7 +10,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     background-image: linear-gradient(
-        to bottom, rgba(0,0,0,0.3), rgba(0, 0, 0, 0.6)
+        to bottom, #bdc3c7, #2c3e50
     );
 }
 
@@ -58,6 +58,15 @@ body {
 }
 .navbar {
     position: relative;
+    background-color: #2c3e50 !important;
+}
+
+nav a {
+    color: #fff !important;
+}
+
+ul li a {
+    color: #fff !important;
 }
 
 #githubLink {
@@ -65,7 +74,15 @@ body {
     left: 95%;
 }
 
+#githubLink a {
+    text-decoration: none;
+}
+
 #linkedinLink {
     position: absolute;
     left: 89%;
+}
+
+#linkedinLink a {
+    text-decoration: none;
 }
