--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,7 @@ body {
 }
 
 .wrapper {
+    position: relative;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -13,6 +14,7 @@ body {
         to bottom, #bdc3c7, #2c3e50
     );
 }
+
 
 .weatherResult {
     display: flex;
@@ -49,13 +51,6 @@ body {
     font-size: 600;
 }
 
-.jumbotron {
-    margin-top: 10%;
-    width: 50%;
-    background-image: linear-gradient(
-        to bottom, rgba(0,0,0,0.5), rgba(0, 0, 0, 0.8)  
-    );
-}
 .navbar {
     position: relative;
     background-color: #2c3e50 !important;
@@ -85,4 +80,30 @@ ul li a {
 
 #linkedinLink a {
     text-decoration: none;
+}
+
+
+
+.textField {
+    width: 70%;
+    border: 1px solid;
+    margin: 0px 0px 10px 10px;
+    background-color: #f1f1f1;
+    border-radius: 10px;
+}
+
+select {
+    width: 70%;
+    border: 1px solid;
+    margin: 10px 10px 10px 10px;
+    background-color: #f1f1f1;
+    border-radius: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.searchButton {
+    margin-left: 20%;
+    margin-bottom: 10px;
+    width: 30%;
 }
