--- a/templates/search.html
+++ b/templates/search.html
@@ -2,22 +2,19 @@
 
 {% block content %}
     <div class="container">
-        <div class="container jumbotron">
+        <div class="form_container">
             <form method="POST" class="form">
                 <div class="form-group">
-                    Search By:
                     <select name='modeOfSearch' class="dropdown">
                         <option value="IP">IP address</option>
                         <option value="City">City</option> 
                         <option value="Zip">Zip Code</option>                       
                     </select>
                     <input type="text" placeholder="Enter IP/City" class="textField form-control" name='searchItem', required='true'>
-                    <br>
                     <input type="text" placeholder="Country/Country Code" class="textField form-control" name='country'>
-                    <input type="submit" value="Search" class="btn btn-primary">
-                </div>
-        
-            </form>
-        </div>    
+                    <input type="submit" value="Search" class="btn btn-primary searchButton">
+                </div>        
+            </form> 
+        </div> 
     </div>
 {% endblock content %}
