--- a/templates/base.html
+++ b/templates/base.html
@@ -27,16 +27,16 @@
             </button>
           
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav">
-                <li class="nav-item">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item pr-2">
                     <a class="nav-link " href="{{url_for('search')}}">Search <i class="fa fa-search"></i> </a>
                 </li>
-                <li class="navbar-item" id="githubLink">
+                <li class="navbar-item pr-2 py-1" id="githubLink">
                     <a href="https://github.com/sukanta-27/Weather-App" target="_blank">
                         <img src="/static/assets/GitHub.png" alt="githubLink">&nbsp;
                     </a>
                 </li>
-                <li class="navbar-item" id="linkedinLink">
+                <li class="navbar-item py-1" id="linkedinLink">
                     <a href="https://www.linkedin.com/in/sukanta-roy-448a5856" target="_blank">
                         <img src="/static/assets/LinkedIn.svg" alt="linkedin" height="32px" width="30px">&nbsp;
                     </a>
