--- a/templates/search.html
+++ b/templates/search.html
@@ -5,14 +5,20 @@
         <div class="form_container">
             <form method="POST" class="form">
                 <div class="form-group">
-                    <span>
-                        <i class="fa fa-search"></i>&nbsp; Search By:
-                    </span>
-                    <select name='modeOfSearch' class="form-control">
-                        <option value="IP">IP address</option>
-                        <option value="City" selected>City</option> 
-                        <option value="Zip">Zip Code</option>                       
-                    </select>
+                    <div class="row">
+                        <div class="col col-4 col-sm-6 col-md-5 col-xs-6 col-lg-4">
+                            <span id="SearchByText">
+                                <i class="fa fa-search"></i>&nbsp; Search By:
+                            </span>
+                        </div>
+                        <div class="col col-8 col-sm-6 col-md-7 col-xs-6 col-lg-8">
+                            <select name='modeOfSearch' class="form-control">
+                                <option value="IP">IP address</option>
+                                <option value="City" selected>City</option> 
+                                <option value="Zip">Zip Code</option>                       
+                            </select>
+                        </div>
+                    </div>
                 </div>
                 <div class="form-group">
                     <input type="text" placeholder="Enter IP/City" class="textField form-control" name='searchItem', required='true'>
