Add bootstrap card

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,8 @@
 
 {% block content %}
     
-    <div class="weatherResult">
-        
+    <div class="weatherResult card">
+        <img src="/static/assets/cloudy.svg" alt="" height="50px" width="auto">
         <div class="city_name">
             <p>
                 {{weather['name']}}
