--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,5 @@
 body {
     font-family: 'Lato' sans-serif;
-    /* background-image: url('/static/assets/bg_image.jpg'); */
     background-size: cover;
     background-position: top center;
 }
@@ -20,9 +19,14 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 12%;
     text-align: center;
     justify-content: center;
+
+    /* For card */
+    background-color: rgba(0,0,0,0.3);
+    width: 24rem;
+    margin: auto;
+    padding-top: 2rem;
 }
 
 .city_name {
@@ -73,9 +77,11 @@ ul li a {
 }
 
 .form_container {
-    width: 45%;
-    margin-top: 16%;
-    margin-left: 28%;
+    background-color: rgba(0,0,0,0.3);
+    padding-top: 10%;
+    padding-bottom: 10%;
+    padding-left: 15%;
+    padding-right: 15%;
 }
 
 select {
