--- a/templates/search.html
+++ b/templates/search.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
-{% block content %}
-    <div class="container">
-        <div class="form_container">
+{% block content %} 
+    <div class="container m-auto">
+        <div class="form_container card">
             <form method="POST" class="form">
                 <div class="form-group">
                     <div class="row">
