--- a/static/style.css
+++ b/static/style.css
@@ -23,10 +23,18 @@ body {
     justify-content: center;
 
     /* For card */
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0,0,0,0.2);
     width: 24rem;
     margin: auto;
     padding-top: 2rem;
+}
+
+.textField {
+    border-radius: 20px;
+}
+
+#modeOfSearch {
+    border-radius: 20px;
 }
 
 .city_name {
@@ -77,7 +85,7 @@ ul li a {
 }
 
 .form_container {
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0,0,0,0.2);
     padding-top: 10%;
     padding-bottom: 10%;
     padding-left: 15%;
