Organize style.css

--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,7 @@
+/* ################################################################################# */
+/* ################################### General ##################################### */
+/* ################################################################################# */
+
 body {
     font-family: 'Lato' sans-serif;
     background-size: cover;
@@ -14,6 +18,9 @@ body {
     );
 }
 
+/* ################################################################################# */
+/* ########################## Index/Weather Card ################################### */
+/* ################################################################################# */
 
 .weatherResult {
     display: flex;
@@ -27,14 +34,6 @@ body {
     width: 24rem;
     margin: auto;
     padding-top: 2rem;
-}
-
-.textField {
-    border-radius: 20px;
-}
-
-#modeOfSearch {
-    border-radius: 20px;
 }
 
 .city_name {
@@ -63,6 +62,10 @@ body {
     font-size: 600;
 }
 
+/* ################################################################################# */
+/* ################################### Navbar ###################################### */
+/* ################################################################################# */
+
 .navbar {
     position: relative;
     background-color: #2c3e50 !important;
@@ -84,6 +87,10 @@ ul li a {
     text-decoration: none;
 }
 
+/* ################################################################################# */
+/* ################################### Search Page ################################# */
+/* ################################################################################# */
+
 .form_container {
     background-color: rgba(0,0,0,0.2);
     padding-top: 10%;
@@ -99,4 +106,12 @@ select {
 #SearchByText {
     font-size: 1.2rem;
     color: #fff;
+}
+
+.textField {
+    border-radius: 20px;
+}
+
+#modeOfSearch {
+    border-radius: 20px;
 }
