--- a/static/style.css
+++ b/static/style.css
@@ -1,14 +1,17 @@
 /* ################################################################################# */
-/* ################################### General ##################################### */
+/* ################################### General/Reusable ############################ */
 /* ################################################################################# */
 
-body {
+/* * {
+    margin: 0 !important;
+    padding: 0 !important;
+} */
+
+html {
     font-family: 'Lato' sans-serif;
-    background-size: cover;
-    background-position: top center;
 }
 
-.wrapper {
+body {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -16,26 +19,39 @@ body {
     background-image: linear-gradient(
         to bottom, #bdc3c7, #2c3e50
     );
+    background: linear-gradient(to bottom,#e2e2e2, #c9d6ff);
+    background-size: cover;
 }
 
+.wrapper {
+    /* position: relative; */
+    background-color: pink;
+}
+
+.mp-0 {
+    padding: 0 !important;
+    margin: 0 !important;
+}
 /* ################################################################################# */
 /* ########################## Index/Weather Card ################################### */
 /* ################################################################################# */
 
-.weatherResult {
+/* .weatherResult {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
     justify-content: center;
 
-    /* For card */
+    
     background-color: rgba(0,0,0,0.2);
     width: 24rem;
     margin: auto;
     padding-top: 2rem;
-}
+    background-color: pink;
+} */
 
+/*
 .city_name {
     color: #fff;
     font-size: 32px;
@@ -60,7 +76,7 @@ body {
 
 .temp p span {
     font-size: 600;
-}
+} */
 
 /* ################################################################################# */
 /* ################################### Navbar ###################################### */
@@ -114,4 +130,101 @@ select {
 
 #modeOfSearch {
     border-radius: 20px;
+}
+
+/* ################################################################################# */
+/* ################################### Weather Card Macro ########################## */
+/* ################################################################################# */
+
+.div_wrapper {
+    display: inline-block;
+    /* position: absolute; */
+    /* left: 35%;
+    top: 15%; */
+    align-items: center;
+    /* max-width: 30%; */
+    height: auto;
+    box-shadow: 0px 0px rgba(0, 0, 0, 0.1);
+    transition: transform 0.5s, box-shadow 0.5s;
+}
+
+.div_wrapper:hover {
+    transform: scale(0.95);
+    box-shadow: 10px 10px rgba(0, 0, 0, 0.2);
+}
+
+.upper_half {
+    display: inline-block;
+    width: 100%;
+    background: linear-gradient(to bottom, #c9d6ff -0.89%, #e2e2e2 96.2%);
+}
+
+.lower_half {
+    display: inline-block;
+    width: 100%;
+    background: linear-gradient(89.8deg, #373b44 1.03%, #4286f4 98.13%);
+}
+
+/* General info about location and date */
+.gI {
+    text-align: center;
+}
+
+.generalInfo {
+    padding-right: 10px;
+    padding-top: 2%;
+}
+.gI li {
+    font-size: 15px;
+    font-weight: 500;
+    font-style: italic;
+}
+.icon img {
+    height: 80px;
+    width: auto;
+}
+ul {
+    list-style: none;
+}
+
+.resultMain p {
+    width: 100%;
+    text-align: center;
+    font-family: Roboto;
+    font-style: italic;
+    font-weight: 300;
+    font-size: 40px;
+    line-height: 35px;
+}
+  
+.resultTemp p {
+    width: 100%;
+    font-size: 50px;
+    font-weight: 600;
+    text-shadow: 2px 5px rgba(0, 0, 0, 0.2);
+    text-align: center;
+}
+
+.extraInfo,
+.extraInfoSubHeading {
+  text-align: center;
+}
+.extraInfo {
+  font-family: Roboto;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 30px;
+  line-height: 35px;
+  color: #ffffff;
+  padding-top: 5% !important;
+}
+
+.extraInfoSubHeading {
+  font-family: Roboto;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 18px;
+  padding-bottom: 7% !important;
+  color: rgba(255, 255, 255, 0.61);
 }
