--- a/static/style.css
+++ b/static/style.css
@@ -13,14 +13,9 @@ html {
 
 body {
     position: relative;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    background-image: linear-gradient(
-        to bottom, #bdc3c7, #2c3e50
-    );
     background: linear-gradient(to bottom,#e2e2e2, #c9d6ff);
     background-size: cover;
+    min-height: 100vh;
 }
 
 .wrapper {
@@ -32,51 +27,6 @@ body {
     padding: 0 !important;
     margin: 0 !important;
 }
-/* ################################################################################# */
-/* ########################## Index/Weather Card ################################### */
-/* ################################################################################# */
-
-/* .weatherResult {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-
-    
-    background-color: rgba(0,0,0,0.2);
-    width: 24rem;
-    margin: auto;
-    padding-top: 2rem;
-    background-color: pink;
-} */
-
-/*
-.city_name {
-    color: #fff;
-    font-size: 32px;
-    font-weight: 500;
-    margin-bottom: 10px;
-}
-
-.weatherMain {
-    color: #fff;
-    font-size: 32px;
-    font-weight: 700;
-    font-style: italic;
-    text-shadow: 2px 5px rgba(0,0,0,0.3);
-}
-
-.temp {
-    color: #fff;
-    font-size: 80px;
-    font-weight: 900;
-    text-shadow: 2px 10px rgba(0,0,0,0.3);
-}
-
-.temp p span {
-    font-size: 600;
-} */
 
 /* ################################################################################# */
 /* ################################### Navbar ###################################### */
@@ -136,20 +86,22 @@ select {
 /* ################################### Weather Card Macro ########################## */
 /* ################################################################################# */
 
+.currentWeatherCard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 90.9vh;
+}
+
 .div_wrapper {
     display: inline-block;
-    /* position: absolute; */
-    /* left: 35%;
-    top: 15%; */
-    align-items: center;
-    /* max-width: 30%; */
-    height: auto;
     box-shadow: 0px 0px rgba(0, 0, 0, 0.1);
     transition: transform 0.5s, box-shadow 0.5s;
 }
 
 .div_wrapper:hover {
-    transform: scale(0.95);
+    transform: scale(1.15);
     box-shadow: 10px 10px rgba(0, 0, 0, 0.2);
 }
 
