Update linkedIn image icon name in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
                 </li>
                 <li class="navbar-item py-1" id="linkedinLink">
                     <a href="https://www.linkedin.com/in/sukanta-roy-448a5856" target="_blank">
-                        <img src="/static/assets/LinkedIn.svg" alt="linkedin" height="32px" width="30px">&nbsp;
+                        <img src="/static/assets/linkedIn.svg" alt="linkedin" height="32px" width="30px">&nbsp;
                     </a>
                 </li>
             </ul>
